Fixed null creator issue on user accept request,set up structure for user rejections