@@ -1,26 +1,26 @@
 package p2p.common.model;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.*;
 
 /**
  * Represents a group chat.
  * Immutable and serializable.
+ *
+ * @param members Members excluding the leader
+ * @param epoch   For leader election
  */
-public final class Group implements Serializable {
+public record Group(String groupId, String name, User leader, Set<User> members,
+                    long epoch) implements Serializable {
+    @Serial
     private static final long serialVersionUID = 1L;
 
-    private final String groupId;
-    private final String name;
-    private final String leaderId;
-    private final Set<User> members; // Members excluding the leader
-    private final long epoch; // For leader election
-
-    public Group(String groupId, String name, String leaderId, Set<User> members, long epoch) {
+    public Group(String groupId, String name, User leader, Set<User> members, long epoch) {
         this.groupId = Objects.requireNonNull(groupId);
         this.name = Objects.requireNonNull(name);
-        this.leaderId = Objects.requireNonNull(leaderId);
-        this.members = Collections.unmodifiableSet(new HashSet<>(Objects.requireNonNull(members)));
+        this.leader = Objects.requireNonNull(leader);
+        this.members = Set.copyOf(Objects.requireNonNull(members));
         this.epoch = epoch;
     }
 
@@ -30,7 +30,7 @@ public final class Group implements Serializable {
         if (initialMembers != null) {
             for (User user : initialMembers) {
                 // Exclude creator from members - they're the leader
-                if (!user.getUserId().equals(creator.getUserId())) {
+                if (!user.userId().equals(creator.userId())) {
                     memberSet.add(user);
                 }
             }
@@ -38,48 +38,38 @@ public final class Group implements Serializable {
         return new Group(
                 UUID.randomUUID().toString(),
                 name,
-                creator.getUserId(),
+                creator,
                 memberSet,
                 0);
     }
 
-    public String getGroupId() {
-        return groupId;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public String getLeaderId() {
-        return leaderId;
-    }
-
-    public Set<User> getMembers() {
-        return members;
-    }
-
-    public long getEpoch() {
-        return epoch;
-    }
-
     public boolean isMember(String userId) {
         // Check if user is leader OR in members set
-        return leaderId.equals(userId) || members.stream().anyMatch(u -> u.getUserId().equals(userId));
+        return leader.userId().equals(userId) || members.stream().anyMatch(u -> u.userId().equals(userId));
     }
 
-    public Group withNewLeader(String newLeaderId, long newEpoch) {
-        return new Group(groupId, name, newLeaderId, members, newEpoch);
+    public Group withNewLeader(User newLeader, long newEpoch) {
+        return new Group(groupId, name, newLeader, members, newEpoch);
     }
 
     public Group withAddedMember(User newMember) {
         // Don't add if already a member or if they're the leader
-        if (isMember(newMember.getUserId()) || newMember.getUserId().equals(leaderId)) {
+        if (isMember(newMember.userId()) || newMember.userId().equals(leader.userId())) {
             return this;
         }
         Set<User> newMembers = new HashSet<>(members);
         newMembers.add(newMember);
-        return new Group(groupId, name, leaderId, newMembers, epoch);
+        return new Group(groupId, name, leader, newMembers, epoch);
+    }
+
+    public Group withRemovedMember(User newMember) {
+        // Don't add if already a member or if they're the leader
+        if (!isMember(newMember.userId()) && !newMember.userId().equals(leader.userId())) {
+            return this;
+        }
+        Set<User> newMembers = new HashSet<>(members);
+        newMembers.remove(newMember);
+        return new Group(groupId, name, leader, newMembers, epoch);
     }
 
     @Override
@@ -100,6 +90,6 @@ public final class Group implements Serializable {
     @Override
     public String toString() {
         return String.format("Group{id='%s', name='%s', leader='%s', members=%d, epoch=%d}",
-                groupId, name, leaderId, members.size(), epoch);
+                groupId, name, leader.username(), members.size(), epoch);
     }
 }
